--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,44 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<h2>会員情報編集</h2>
+
+<%= form_with model: @customer, url: admin_customer_path do |f| %>
+
+<table class="row table">
+    <tr>
+        <th class="col-xs-2"><%= f.label :会員ID %></th>
+        <td class="col-xs-10"><%= f.text_field :id , class:"form_control" %></td>
+    </tr>
+    
+    <tr>
+        <th><%= f.label :氏名 %></th>
+        <td><%= f.text_field :last_name, class:"form_control" %><br>
+            <%= f.text_field :first_name, class:"form_control" %>
+        </td>
+    </tr>
+    
+     <tr>
+        <th><%= f.label :フリガナ %></th>
+        <td><%= f.text_field :last_name_kana, class:"form_control" %><br>
+            <%= f.text_field :first_name_kana, class:"form_control" %>
+        </td>
+    </tr>
+    
+     <tr>
+        <th><%= f.label :郵便番号 %></th>
+        <td><%= f.text_field :address, class:"form_control" %>
+        </td>
+    </tr>
+    
+     <tr>
+        <th><%= f.label :メールアドレス %></th>
+        <td><%= f.text_field :email, class:"form_control" %> </td>
+    </tr>
+    <tr>
+        <th><%= f.label :メールアドレス %></th>
+        <td><%= f.select :is_active,[["有効会員","Invalid"],["退会済み","Available"]] ,class:"form_control" %> </td>
+    </tr>
+</table>
+
+        <div class="row text-right">
+            <%= f.submit "変更を保存する" ,class: "btn btn-success " %>
+        </div>
+<% end%
