--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div class="row">
+    <div class="co1-xs-10 co1-xs-1">
+        <h1>ジャンル一覧画面</h1>
+        <h2>ジャンル登録</h2>
+            <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
+                <h3>ジャンル名</h3>
+                <%= f.text_field :name %>
+                <%= f.submit '登録', class"btn btn-success" %>
+            <% end %>
+            
+    <br>
+        <table class="table genre-index">
+            <thead>
+                <tr>
+                    <th>ジャンル</th>
+                    <th>状態</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% @genres.each do |genre| %>
+                <%= genre.neme %>
+            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-primary" %></td>
+                <% end %>
+            </tbody>
+        </table>
+        </div>
+</div>
