--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-    <div class="co1-xs-10 co1-xs-offset-1">
+    <div class="col-xs-10 co-xs-offset-1">
         <h2>会員一覧</h2>
         
         <table class=table>
