--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="co1-xs-10 co1-xs-offset-1">
+    <div class="col-xs-10 col-xs-offset-1">
         <h2>会員情報詳細</h2>
         <table class="row table">
             
             <tr>
-                <th class="co1-xs-2">顧客ID</th>
-                <td class="co1-xs-10"><%= @customer.id %>
+                <th class="col-xs-2">顧客ID</th>
+                <td class="col-xs-10"><%= @customer.id %>
                 <% if @customer.is_active == false %>
                 <span class="label label-primary">
                     有効会員
