--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="co1-xs-10 co1-xs-offset-1">
+    <div class="col-xs-10 col-xs-offset-1">
         <h2>ジャンル編集</h2><br>
         
         <div class="edit-genre-form">
     <%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
             <%= f.label :ジャンル %>
-            <%= f.text_field :name,class: "co1-md-4" %>
+            <%= f.text_field :name,class: "col-md-4" %>
             <%= f.radio_button :is_active, :true %>
             <%= f.label :is_genres_status, "有効" %>
             <%= f.radio_button :is_active, :false %>
