--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="co1-xs-10 co1-xs-1">
+    <div class="col-xs-10 col-xs-1">
         <h1>ジャンル一覧画面</h1>
         <h2>ジャンル登録</h2>
             <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
