--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,47 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1">
+        <div class="row">
+          
+          <%= form_with model: @item, url: admin_item_path, method: :post, local:true do |f| %>
+         <div class="col-md-5 col-xs-5" >
+             <h2>商品新規登録</h2>
+                        <li>商品画像<%= f.attachment_field :image %></li>
+                <div class="product-img" style="margin-top: 20px;">
+                    <%= image_tag 'no_image.jpg', id:"fire-preview", :size => '350×350' %>
+                </div>
+         </div>
+         <br><br><br>
+         <div class="col-md-5 col-md-offset-2 col-xs-5 col-xs-offset-2">
+             <table class="new-form-table">
+                 <tbody>
+                     <tr>
+                         <th>ジャンル</th>
+                         <td><%= f.collection_select :genre_id, Genre.all ,:id, :name, include_blank: "--選択してください--" %></td>
+                     </tr>
+                     
+                     <tr>
+                         <th>販売ステータス</th>
+                         <td><%= f.select :is_active, [["販売中","false"], [["販売不可","true"]], include_blank: "--選択してください--" %></td>
+                     </tr>
+                     
+                     <tr>
+                         <th>商品名</th>
+                         <td><%= f.text_field :name %></td>
+                     </tr>
+                     
+                      <tr>
+                         <th>商品説明</th>
+                         <td><%= f.text_area ;introduction %></td>
+                     </tr>
+                     
+                      <tr>
+                         <th>税抜価格</th>
+                         <td><%= f.number_field :price %></td>
+                     </tr>
+                 </tbody>
+             </table>
+            <%= f.submit '新規登録', class:"btn btn-success" %>
+        <% end %>
+        </div>
+    </div>
+</div>
