--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<div class="row">
+    <div class="col-xs-12">
+        <h3><string>配送先編集</string></h3>
+        <%= form_with model: @address, url:public_address_path, local: ture , method: :path do |f| %>
+        <div class="addres col-xs-10">
+            <div class="form-group col-xs-12">
+                <%= f.label :"郵便番号（ハイフンなし）" ,class: "col-xs-3 control-label" %>
+                <%= f.text_field :postal_code, class: "col-xs-4 form-control-static postal_code" %>
+            </div>
+            
+            <div class="form-group col-xs-12">
+                <%= f.label :"住所" ,class: "col-xs-3 control-label" %>
+                <%= f.text_field :address, class: "col-xs-7 form-control-static address" %>
+            </div>
+            
+            <div class="form-group col-xs-12">
+                <%= f.label :"宛名" ,class: "col-xs-3 control-label" %>
+                <%= f.text_field :name, class: "col-xs-4 form-control-static name" %>
+            </div>
+            <%= f.submit '編集する' ,class: "col-xs-2 pull-right btn-lg btn-success " %>
+        </div>
+            <% end %>
+    </div>
+</div>
