--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,38 +1,38 @@
-<div>
-    <div class="col-xs-10 co-xs-offset-1">
-        <h2>会員一覧</h2>
-        
-        <table class=table>
-            <thead>
-                <tr>
-                    <th>会員ID</th>
-                    <th>氏名</th>
-                    <th>メールアドレス</th>
-                    <th>ステータス</th>
-                </tr>
-            </thead>
-            
-            <tbody>
-                <% @customer.each do |customer| %>
-                <tr>
-                    <td><%= customer.id %></td>
-                    <td>
-                        <%= link_to admin_customer_path(customer) do %>
-                            <%= customer.last_name %>
-                             <%= customer.first_name %>
-                        <% end %>
-                    </td>
-                    <td><%= customer.email %></td>
-                    <td>
-                        <% if customer.is_active == false %>
-                        有効
-                        <% else %>
-                        無効
-                        <% end %>
-                    </td>
-                </tr>
-            <% end %>    
-            </tbody>
-        </table>
+<div class="row">
+    <div class="col-xs-10 col-xs-offset-1">
+      <h2>会員一覧</h2>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>会員ID</th>
+            <th>氏名</th>
+            <th>メールアドレス</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @customers.each do |customer| %>
+            <tr>
+              <td><%= customer.id %></td>
+              <td>
+                <%= link_to admin_customer_path(customer) do %>
+                  <%= customer.last_name %>
+                  <%= customer.first_name %>
+                <% end %>
+              </td>
+              <td><%= customer.email %></td>
+              <td>
+                <% if customer.is_active == false %>
+                有効
+                <% else %>
+                無効
+                <% end %>
+              </td>
+            </tr>
+            <% end %>
+        </tbody>
+      </table>
     </div>
-</div>
+  </div>
