--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,52 +3,71 @@
   <head>
     <title>NaganoCake</title>
     <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <header>
-    <% if admin_signed_in? %>
-      <li>
-        <%= link_to 'ジャンル一覧', admin_genres_path %>
-      </li>
-      <li>
-        <%= link_to '商品一覧', admin_items_path %>
-      </li>
-      <li>
-        <%= link_to '会員一覧', admin_customers_path %>
-      </li>
-      <li>
-        <%= link_to '注文履歴一覧', admin_orders_path %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-      </li>
-    <% elsif customer_signed_in? %>
-      <li>
-        <%= link_to 'マイページ', customers_path %>
-      </li>
-      <li>
-        <%= link_to '商品一覧', items_path %>
-      </li>
-      <li>
-        <%= link_to 'カート画面', cart_items_path %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-      </li>
-
-    <% else %>
-      <li>
-        <%= link_to "会員登録", new_customer_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_customer_session_path %>
-      </li>
-    <% end %>
-  </header>
-
   <body>
+    <nav>
+      <div>
+        <nav class = "navbar navbar-expand-lg">
+          <div class="container">
+            <%= link_to "LOGO", root_path, class: "navbar-brand text-dark border rounded p-3" %></a>
+            <!--<div class = "row">-->
+            <ul class = "navbar-nav ml-auto">
+              <% if customer_signed_in? %>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "マイページ", customers_my_page_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "商品一覧", items_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "カート", cart_items_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "text-dark" %>
+              </li>
+              <% elsif admin_signed_in? %>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "商品一覧", admin_items_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "会員一覧", admin_customers_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "注文一覧", admin_root_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "ジャンル一覧", admin_genres_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "text-dark" %>
+              </li>
+              <% else %>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "About", about_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "商品一覧", items_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "新規登録", new_customer_registration_path, class: "text-dark" %>
+              </li>
+              <li class = "nav-item  nav-link text-light border rounded mx-3">
+                <%= link_to "ログイン", new_customer_session_path, class: "text-dark" %>
+              </li>
+              <% end %>
+            </ul>
+            <!--</div>-->
+        </div>
+      </nav>
+      </div>
+    </nav>
+    <% if customer_signed_in? %>
+    <p class="text-center">ようこそ、<%= current_customer.last_name %>さん！</p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
