--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,52 +1,46 @@
-<div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
-        <h2>会員情報詳細</h2>
-        <table class="row table">
-            
-            <tr>
-                <th class="col-xs-2">顧客ID</th>
-                <td class="col-xs-10"><%= @customer.id %>
-                <% if @customer.is_active == false %>
-                <span class="label label-primary">
-                    有効会員
-                </span>
-                <% else %>
-                <span class="label label-danger">
-                    退会済み
-                </span>
-                <% end %>
-                </td>
-            </tr>
-            
-            <tr>
-                <th>フリガナ</th>
-                <td><%= @customer.last_name_kana %><%= @customer.first_name_kana %></td>
-            </tr>
-            
-            <tr>
-                <th>郵便番号</th>
-                <td><%= @customer.postal_code %></td>
-            </tr>
-            
-            <tr>
-                <th>住所</th>
-                <td><%= @customer.address %></td>
-            </tr>
-            
-            <tr>
-                <th>電話番号</th>
-                <td><%= @customer.phone_number %></td>
-            </tr>
-            
-            <tr>
-                <th>メールアドレス</th>
-                <td><%= @customer.email %></td>
-            </tr>
-        </table>
-        
-        <div class="row">
-            <%= link_to"編集する",edit_admin_customer_path(@customer), class: "btn btn-success" %>
-            <%= link_to"注文一覧を見る",admin_orders_path, class: "btn btn-success" %>
-        </div>
-    </div>
+<h4 class="mx-5"><%= @customer.name %>さんの会員詳細</h4>
+
+<div class="mx-5">
+  <table>
+  <tbody>
+    <tr>
+      <td>会員ID</td>
+      <td><%= @customer.id %></td>
+    </tr>
+    <tr>
+      <td>氏名</td>
+      <td><%= @customer.full_name %></td>
+    </tr>
+    <tr>
+      <td>フリガナ</td>
+      <td><%= @customer.name_kana %></td>
+    </tr>
+    <tr>
+      <td>郵便番号</td>
+      <td><%= @customer.postal_code %></td>
+    </tr>
+    <tr>
+      <td>住所</td>
+      <td><%= @customer.address %></td>
+    </tr>
+    <tr>
+      <td>電話番号</td>
+      <td><%= @customer.telephone_number %></td>
+    </tr>
+    <tr>
+      <td>メールアドレス</td>
+      <td><%= @customer.email %></td>
+    </tr>
+    <tr>
+      <td>会員ステータス</td>
+      <td><%= @customer.is_active == true ? "有効" : "退会" %></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-sm btn-success mx-2" %><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-sm btn-primary mx-2" %>
+      </td>
+    </tr>
+  </tbody>
+</table>
 </div>
