--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,17 +1,10 @@
-<div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
-        <h2>ジャンル編集</h2><br>
-        
-        <div class="edit-genre-form">
-    <%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
-            <%= f.label :ジャンル %>
-            <%= f.text_field :name,class: "col-md-4" %>
-            <%= f.radio_button :is_active, :true %>
-            <%= f.label :is_genres_status, "有効" %>
-            <%= f.radio_button :is_active, :false %>
-            <%= f.label :is_genres_status, "無効" %>
-            <%= f.submit "変更を保存する" ,class: "btn btn-primary" %>
-        </div>
-    <% end %>
-    </div>
+<h4 class="mx-5">ジャンル編集</h4>
+<div class="mx-5">
+  <%= form_with model: [:admin, @genre], local:true do |f| %>
+  <p class="font-weight-bold">
+    ジャンル名
+    <%= f.text_field :name %>
+    <button type="submit" class="btn btn-success">変更を保存</button>
+  </p>
+  <% end %>
 </div>
