--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,27 +1,28 @@
-<div class="row">
-    <div class="col-xs-10 col-xs-1">
-        <h1>ジャンル一覧画面</h1>
-        <h2>ジャンル登録</h2>
-            <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
-                <h3>ジャンル名</h3>
-                <%= f.text_field :name %>
-                <%= f.submit '登録', class"btn btn-success" %>
-            <% end %>
-            
-    <br>
-        <table class="table genre-index">
-            <thead>
-                <tr>
-                    <th>ジャンル</th>
-                    <th>状態</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% @genres.each do |genre| %>
-                <%= genre.neme %>
-            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-primary" %></td>
-                <% end %>
-            </tbody>
-        </table>
-        </div>
+<h4 class="mx-5">ジャンル一覧・追加</h4>
+<div class="mx-5">
+  <%= form_with model: [:admin, @genre], local:true do |f| %>
+    <p class="font-weight-bold">
+      ジャンル名
+      <%= f.text_field :name %>
+      <button type="submit" class="btn btn-success">新規登録</button>
+    </p>
+    <% end %>
+    
+    <table class="table-bordered">
+        <thead>
+            <tr>
+                <th>ジャンル</th>
+            </tr>
+        </thead>
+        <% @genres.each do |genre| %>
+        <tbody>
+            <tr>
+                <td>
+                    <%= genre.name %>
+                    <span class="float-right"><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %></span>
+                </td>
+            </tr>
+        </tbody>
+        <% end %>
+    </table>
 </div>
