--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,39 +1,31 @@
-<div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
-        <h2>商品一覧</h2>
-            <div class="text-right">
-                <%= link_to '新規登録', new_admin_item_path , class:"btn btn-success" %>
-            </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <!---->
-                            <th>商品一覧</th>
-                            <th>商品名</th>
-                            <th>税抜価格</th>
-                            <th>ジャンル</th>
-                            <th>ステータス</th>
-                        </tr>
-                    </thead>
-                <tbody>
-                    <% @items.each do |item| %>
-                                    <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px; margin: 10px 0;">
-                 <tr>
-                     <%#= attachment_image_tag item, :image, :fill, 200, 150, format: 'jpeg',fallback: "no_image.jpg" %> <br>
-                     <td><%= item.id %></td>
-                     <td><%= link_to item.name, admin_item_path(item) %></td>
-                     <td><%= item.price %></td>
-                     <td><%= item.genre.name %></td>
-                     <td><%= if item.is_active == false %>
-                     販売中
-                     <% else %>
-                     販売停止中
-                     <% end %>
-                </div>
-                     </td>
-                 </tr>                       
-    
-                </tbody>
-     </table>
-    </div>
+<div class="container">
+  <div class="row">
+    <h4 class="mx-5 col-xs-7">商品一覧</h4>
+    <label class="col-xs-5 row justify-content-end mx-5"><%= button_to "+", {controller: 'items', action: 'new'}, {method: :get } %></label>
+  </div>
 </div>
+
+
+
+<table class="table mx-auto" style="width: 60%;">
+  <thead>
+    <th>商品ID</th>
+    <th>商品名</th>
+    <th>税抜価格</th>
+    <th>ジャンル</th>
+    <th>ステータス</th>
+  </thead>
+  <tbody>
+    <% @items.each do |item| %>
+    <tr>
+      <td><%= item.id %></td>
+      <td><%= link_to item.name, admin_item_path(item.id) %></td>
+      <td><%= item.price.to_s(:delimited) %></td>
+      <td><%= item.genre.name %></td>
+      <td><%= item.is_active == true ? "販売中" : "販売中止" %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<div class="d-flex justify-content-center"><%= paginate @items %></div>
