--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,46 +1,38 @@
-<div class="row">
-  <div class="col-xs-4">
-    <h1>商品詳細画面</h1>
-      <%= attachment_image_tag @item, :image, :fill, 300, 300, fallback: 'no_image.jpg' %>
-  </div>
-    <br><br><br><br>
-      <div class="col-xs-8">
-        <table class="table">
-          <tbody>
-            <tr>
+<h4 class="mx-5 col-lg-7">商品詳細</h4>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-5 text-right">
+       <%= attachment_image_tag @item, :image, :fill, 400, 300 %>
+    </div>
+    <div class="col-lg-7">
+      <table>
+        <tbody>
+          <tr>
             <td>商品名</td>
             <td><%= @item.name %></td>
-            </tr>
-
-            <tr>
+          </tr>
+          <tr>
             <td>商品説明</td>
             <td><%= @item.introduction %></td>
-            </tr>
-
-            <tr>
+          </tr>
+          <tr>
             <td>ジャンル</td>
-            <td><%= @item.genre_id %></td>
-            </tr>
-
-            <tr>
-            <td>税込価格</td>
-            <td><%= @item.price %></td>
-            </tr>
-
-            <tr>
+            <td><%= @item.genre.name %></td>
+          </tr>
+          <tr>
+            <td>税込価格<br>(税抜価格)</td>
+            <td><%= @item.with_tax_price.to_s(:delimited) %> (<%= @item.price.to_s(:delimited) %>)円</td>
+          </tr>
+          <tr>
             <td>販売ステータス</td>
             <td>
-              <% if @item.is_active == false %>
-              販売中
-            <% else %>
-              販売停止中
-            <% end %>
+              <%= @item.is_active == true ? "販売中" : "販売中止" %>
             </td>
-            </tr>
-          </tbody>
-        </table>
-        <div class="col-md-offset-1 col-md-2 text-right">
-          <%= link_to "編集", edit_admin_item_path(@item.id), class:"btn btn-success"%>
-        </div>
-      </div>
+          </tr>
+        </tbody>
+      </table>
+      <div class="mx-5"><%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-sm btn-success"%></label>
+    </div>
+  </div>
 </div>
