--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,94 +1,78 @@
-<div class="col-xs-10 col-xs-offset-1">
-  <div class="row">
-      <h2>注文明細</h2>
+<h4 class="mx-5">注文履歴詳細</h4>
 
-  <div class="col-xs-7">
-    <table class="table">
-      <tbody>
-      <tr>
-        <th>購入者</th>
-        <td><%= link_to admin_customer_path(@order.customer) do %>
-        <%= @order.customer.last_name %>
-        <%= @order.customer.first_name %>
-        <% end %>
-        </td>
-      </tr>
-
-      <tr>
-        <th>配送先</th>
-        <td><%= @order.address %></td>
-      </tr>
-
-      <tr>
-        <th>支払方法</th>
-        <td><%= @order.payment_method %></td>
-      </tr>
-
-      <tr>
-        <th>注文ステータス</th>
-        <td>
-        <%= form_for (@order), url:admin_order_path(@order) do |f| %>
-        <%= f.select :order_status,Order.order_statuses.keys.to_a %>
-        <%= f.submit "更新", class: "btn btn-success" %>
-        <% end %>
-        </td>
-      </tr>
-
-    </tbody>
-  </table>
-
-      <table class="table">
-        <thead>
-          <tr>
-            <th>商品名</th>
-            <th>単価（税込）</th>
-            <th>数量</th>
-            <th>小計</th>
-            <th>製作ステータス</th>
-          </tr>
-        </thead>
-
-        <tbody>
-      <% @order_details.each do |order_detail| %>
-          <tr>
-            <td><%= order_detail.item.name %></td>
-            <td><%= (order_detail.price).floor.to_s(:delimited, delimiter: ',') %></td>
-            <td><%= order_detail.amount %></td>
-            <td><%= (order_detail.price * order_detail.amount).floor.to_s(:delimited, delimiter: ',') %></td>
-            <td>
-              <%= form_with model: order_detail, url:admin_order_detail_path(order_detail) do |f|  %>
-              <%= f.select :making_status, OrderDetail.making_status.keys.to_a %>
-              <%= f.submit '更新',class:"btn btn-success" %>
-              <% end %>
-            </td>
-          </tr>
-
+<table class="mx-5">
+  <tbody>
+    <tr>
+      <td class="font-weight-bold">購入者</td>
+      <td><%= link_to @order.customer.name, admin_customer_path(@customer.id) %></td>
+    </tr>
+    <tr>
+      <td class="font-weight-bold">注文日</td>
+      <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+    </tr>
+    <tr>
+      <td class="font-weight-bold">配送先</td>
+      <td>
+        〒<%= @order.postal_code %><span> </span><%= @order.address %><br>
+        <%= @order.name %>
+      </td>
+    </tr>
+    <tr>
+      <td class="font-weight-bold">支払方法</td>
+      <td><%= @order.payment_method_i18n %></td>
+    </tr>
+    <tr>
+      <td class="font-weight-bold">注文ステータス</td>
+      <%= form_with model: [:admin, @order], local:true do |f| %>
+      <td><%= f.select :status, Order.statuses_i18n.invert %><button type="submit" class="btn btn-success mx-3">更新</button></td>
       <% end %>
-        </tbody>
-      </table>
-    </div>
+    </tr>
+  </tbody>
+</table>
 
-    <br><br><br><br><br><br><br><br><br><br>
-    <div class="col-xs-4">
-      <table class="table">
-        <tbody>
-
-          <tr>
-            <td>商品合計</td>
-            <td><%= (@order.total_payment - @order.shipping_cost).to_s(:delimited, delimiter: ',') %></td>
-          </tr>
-
-          <tr>
-            <td>送料</td>
-            <td><%= @order.shipping_cost.to_s(:delimited, delimiter: ',') %></td>
-          </tr>
-
-          <tr>
-            <td>請求合計金額</td>
-            <td><%= @order.total_payment.to_s(:delimited, delimiter: ',') %></td>
-          </tr>
-        </tbody>
-      </table>
-     </div>
-    </div>
+<div class="container">
+  <div class="row">
+    <table class="col-9 table">
+      <thead>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th>製作ステータス</th>
+          <th></th>
+      </thead>
+      <tbody>
+        <% total = 0 %>
+        <% @order_details.each do |order_detail| %>
+        <tr>
+          <td><%= order_detail.item.name %></td>
+          <td><%= order_detail.with_tax_price.to_s(:delimited) %></td>
+          <td><%= order_detail.amount %></td>
+          <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+          <% total += order_detail.subtotal %>
+          <td>
+            <%= form_with model: order_detail, url: admin_order_detail_path(order_detail.id), local:true do |f| %>
+            <%= f.select :making, OrderDetail.makings_i18n.invert %>
+            <button type="submit" class="btn btn-success mx-3">更新</button>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <table class="col-3">
+      <tr>
+        <td class="font-weight-bold">商品合計</td>
+        <td><%= total.to_s(:delimited) %>円</td>
+      </tr>
+      <tr>
+        <td class="font-weight-bold">送料</td>
+        <td><%= @order.shipping_cost.to_s(:delimited) %>円</td>
+      </tr>
+      <tr>
+        <td class="font-weight-bold">請求合計金額</td>
+        <td><%= @order.total_payment.to_s(:delimited) %>円</td>
+      </tr>
+    </table>
   </div>
+</div>
