--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,24 +1,21 @@
-<div class="row">
-    <div class="col-xs-12">
-        <h3><string>配送先編集</string></h3>
-        <%= form_with model: @address, url:public_address_path, local: ture , method: :path do |f| %>
-        <div class="addres col-xs-10">
-            <div class="form-group col-xs-12">
-                <%= f.label :"郵便番号（ハイフンなし）" ,class: "col-xs-3 control-label" %>
-                <%= f.text_field :postal_code, class: "col-xs-4 form-control-static postal_code" %>
-            </div>
-            
-            <div class="form-group col-xs-12">
-                <%= f.label :"住所" ,class: "col-xs-3 control-label" %>
-                <%= f.text_field :address, class: "col-xs-7 form-control-static address" %>
-            </div>
-            
-            <div class="form-group col-xs-12">
-                <%= f.label :"宛名" ,class: "col-xs-3 control-label" %>
-                <%= f.text_field :name, class: "col-xs-4 form-control-static name" %>
-            </div>
-            <%= f.submit '編集する' ,class: "col-xs-2 pull-right btn-lg btn-success " %>
-        </div>
-            <% end %>
-    </div>
+<h4 class="mx-5">配送先編集</h4>
+
+<div class="mx-4">
+  <%= form_with model: @address, local:true do |f| %>
+  <table>
+    <tr>
+      <td>郵便番号(ハイフンなし)</td>
+      <td><%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+      <td>住所</td>
+      <td><%= f.text_field :address %></td>
+    </tr>
+    <tr>
+      <td>宛名</td>
+      <td><%= f.text_field :name %></td>
+      <td><button type="submit" class="btn btn-success mx-5">変更内容を保存</button></td>
+    </tr>
+  </table>
+  <% end %>
 </div>
