--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,53 +1,41 @@
-<div class="row">
-    <div class="col-xs-12">
-        <h3><string>配送先登録/一覧</string></h3>
-        <%= form_with model: @address, url: public_address_path, method: :post, local:true do |f| %>
-        <div class=addres>
-            <div class="form-group col-xs-12">
-                <%= f.label :"郵便番号（ハイフンなし）" ,class: "col-xs-3 control-label" %>
-                <%= f.text_field :postal_code, class: "col-xs-4 form-control-static postal_code" %>
-            </div>
-            
-            <div class="form-group col-xs-12">
-                <%= f.label :"住所" ,class: "col-xs-3 control-label" %>
-                <%= f.text_field :address, class: "col-xs-7 form-control-static address" %>
-            </div>
-            
-             <div class="form-group col-xs-12">
-                <%= f.label :"宛名" ,class: "col-xs-3 control-label" %>
-                <%= f.text_field :name, class: "col-xs-4 form-control-static name" %>
-            </div>
-            <%= f.submit '編集する' ,class: "col-xs-2 pull-right btn-lg btn-success " %>
-        </div>
-        <% end %>
-    </div>
-</div>
+<h4 class="mx-5">配送先登録/一覧</h4>
 
-<div class="row">
-    <div class="col-xs-12">
-        <table class="table table-hover table-bordered">
-            <thead>
-                <tr class="address-info">
-                    <th class="col-xs-2">郵便番号</th>
-                    <th class="col-xs-6">住所</th>
-                    <th class="col-xs-2">宛名</th>
-                    <th class="col-xs-2"></th>
-                </tr>
-            </thead>
-            <tbody>
-                <% @addresses.each do |addresses| %>
-                <tr>
-                    <td class="col-xs-2"><%= addresses.postal_code %></td>
-                    <td class="col-xs-6"><%= addresses.address %></td>
-                    <td class="col-xs-2"><%= addresses.name %></td>
-                    <td class="col-xs-2">
-                       <%= link_to "編集する",edit_public_address_path(addresses.id), class: "glyphicon glyphicon-pencil btn-sm btn-primary" %>
-                       <%= link_to "削除する",public_address_path(current_customer), method: :DELETE, data: {confirm: "本当に削除してもよろしいですか?"}, class: "glyphicon glyphicon-trash btn-sm btn-danger" %>
-                
-                    </td>
-                </tr>
-                <% end %>
-            </tbody>
-        </table>
-    </div>
+<div class="mx-4">
+  <%= form_with model: @address, local:true do |f| %>
+  <table>
+    <tr>
+      <td>郵便番号(ハイフンなし)</td>
+      <td><%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+      <td>住所</td>
+      <td><%= f.text_field :address %></td>
+    </tr>
+    <tr>
+      <td>宛名</td>
+      <td><%= f.text_field :name %></td>
+      <td><button type="submit" class="btn btn-success mx-5">新規登録</button></td>
+    </tr>
+  </table>
+  <% end %>
+
+  <table class="table-bordered my-4">
+    <tr>
+      <td>郵便番号</td>
+      <td>住所</td>
+      <td>宛名</td>
+      <td></td>
+    </tr>
+    <% @addresses.each do |address| %>
+    <tr>
+      <td><%= address.postal_code %></td>
+      <td><%= address.address %></td>
+      <td><%= address.name %></td>
+      <td>
+        <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-sm btn-success mx-1" %>
+        <%= link_to "削除する", address_path(address.id), method: :delete, class: "btn btn-sm btn-danger mx-1" %>
+      </td>
+    </tr>
+    <% end %>
+  </table>
 </div>
