--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,64 +1,47 @@
-<div class="row">
-    <div class="col-xs-12">
-      <div>
-        <strong class="information-link"><h3>ショッピングカート</h3></strong>
-        <%= link_to "カートを空にする", public_all_destroy_path, method: :delete, class: "pull-right btn btn-danger" %>
-      </div>
-        <table class="table table-hover table-bordered col-xs-10" >
-         <thead>
-          <tr class="info">
-            <th class="col-xs-3">商品名</th>
-            <th class="col-xs-2">単価（税込み）</th>
-            <th class="col-xs-1">数量</th>
-            <th class="col-xs-1">小計</th>
-            <th class="col-xs-1"></th>
-          </tr>
-         </thead>
-         <tbody>
-          <% @cart_items.each do |cart_item| %>
-          <tr>
-            <td class="col-xs-3"><%= cart_item.item.name %></td>
-            <td class="col-xs-2">¥<%= cart_item.item.price%></td>
-            <td class="col-xs-1">
-                <%= form_for(cart_item, url: public_cart_item_path(cart_item)) do |c| %>
-                <p>
-                  <%= c.number_field :amount, min:1, max:10000, step:1 %>
-                  <%= c.submit "変更", class: "btn btn-primary" %>
-                </p>
-                <% end %>
-            </td>
-            <td class="col-xs-1">
-                ¥<%= ((cart_item.item.price * cart_item.amount * 1.1).floor).to_s(:delimited, delimiter: ',') %>
-            </td>
-            <td class="col-xs-1">
-                <%= link_to "削除する", public_cart_item_path(cart_item.id), method: :DELETE, class: "btn btn-danger" %>
-            </td>
-          </tr>
-          <% end %>
-         </tbody>
-        </table>
-    </div>
-</div>
+<h4 class="mx-5">会員情報編集</h4>
 
-
-<div class="col-xs-8">
-    <span>
-    <%= link_to "買い物を続ける", root_path, class: "btn btn-primary", data: {"turbolinks" => false} %>
-    </span>
-</div>
-<div class="col-xs-4">
-    <table class="table table-bordered">
-        <tr>
-            <td class="info col-xs-2"><strong>合計金額</strong></td>
-            <td class="col-xs-2">¥<%= @total.floor.to_s(:delimited, delimiter: ',') %></td>
-        </tr>
-    </table>
-</div>
-
-
-<div class = "col-xs-4 col-xs-offset-4">
-    <span>
-        <%= link_to "情報入力に進む", public_orders_about_path, class: "col-xs-12 btn btn-success"%>
-    </span>
-    </div>
+<div class="d-flex justify-content-center">
+  <%= form_with model: @customer, url: customers_path, method: :put, local:true do |f| %>
+  <table>
+    <tbody>
+      <tr>
+        <td>氏名</td>
+        <td>
+           <%= f.text_field :last_name, autofocus: true %>
+           <%= f.text_field :first_name, autofocus: true %>
+        </td>
+      </tr>
+      <tr>
+        <td>フリガナ</td>
+        <td>
+          <%= f.text_field :last_name_kana, autofocus: true %>
+          <%= f.text_field :first_name_kana, autofocus: true %>
+        </td>
+      </tr>
+      <tr>
+        <td>郵便番号</td>
+        <td><%= f.text_field :postal_code, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td>住所</td>
+        <td><%= f.text_field :address, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td>電話番号</td>
+        <td><%= f.telephone_field :telephone_number, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td>メールアドレス</td>
+        <td><%= f.email_field :email, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <button type="submit" class="btn btn-success">編集内容を変更を保存</button>
+          <%= link_to "退会する", unsubscribe_customers_path, class: "btn btn-danger mx-5" %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <% end %>
 </div>
