--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,49 +1,45 @@
-<div class="row">
-  <div class="col-xs-12">
-    <h3><strong>マイページ</strong></h3>
-        <table class="table table-bordered table-condensed">
-            <p>
-                <strong class="information-link">登録情報</strong>
-                <%= link_to " 編集する", edit_customers_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
-            </p>
-            <tr>
-                <td class="col-xs-2">氏名</td>
-                <td><%= current_customer.last_name %>&nbsp;<%= current_customer.first_name %></td>
-            </tr>
+<h4 class="mx-5">マイページ</h4>
 
-            <tr>
-                <td class="col-xs-2">カナ</td>
-                <td><%= current_customer.last_name_kana %>&nbsp;<%= current_customer.first_name_kana %></td>
-            </tr>
+<div class="d-flex my-3">
+  <h4 class="mx-4 font-weight-bold">登録情報</h4>
+  <%= link_to "編集する", edit_customers_path, class: "btn btn-success mx-2" %>
+</div>
 
-            <tr>
-                <td class="col-xs-2">郵便番号</td>
-                <td><%= current_customer.postal_code %></td>
-            </tr>
+<table class="table-bordered mx-4">
+  <tbody>
+    <tr>
+      <td>氏名</td>
+      <td><%= @customer.full_name %></td>
+    </tr>
+    <tr>
+      <td>カナ</td>
+      <td><%= @customer.name_kana %></td>
+    </tr>
+    <tr>
+      <td>郵便番号</td>
+      <td><%= @customer.postal_code %></td>
+    </tr>
+    <tr>
+      <td>住所</td>
+      <td><%= @customer.address %></td>
+    </tr>
+    <tr>
+      <td>電話番号</td>
+      <td><%= @customer.telephone_number %></td>
+    </tr>
+     <tr>
+      <td>メールアドレス</td>
+      <td><%= @customer.email %></td>
+    </tr>
+  </tbody>
+</table>
 
-            <tr>
-                <td class="col-xs-2">住所</td>
-                <td><%= current_customer.address %></td>
-            </tr>
+<div class="d-flex my-3">
+  <h4 class="mx-4 font-weight-bold">配送先</h4>
+  <%= link_to "一覧を見る", addresses_path, class: "btn btn-primary mx-2" %>
+</div>
 
-            <tr>
-                <td class="col-xs-2">電話番号</td>
-                <td><%= current_customer.phone_number %></td>
-            </tr>
-
-            <tr>
-                <td class="col-xs-2">メールアドレス</td>
-                <td><%= current_customer.email %></td>
-            </tr>
-        </table>
-
-        <p>
-            <strong class="shipping-link">配送先　</strong>
-            <%= link_to " 一覧を見る", addresses_path, class: "glyphicon glyphicon-folder-open btn btn-info" %>
-        </p>
-        <p>
-            <strong class="shipping-link">注文履歴</strong>
-            <%= link_to " 一覧を見る", orders_path, class: "glyphicon glyphicon-folder-open btn btn-info" %>
-        </p>
-  <div>
+<div class="d-flex my-3">
+  <h4 class="mx-4 font-weight-bold">注文履歴</h4>
+  <%= link_to "一覧を見る", orders_path, class: "btn btn-primary mx-2" %>
 </div>
