--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,8 @@
-<h1>about</h1>
-<p>ここはaboutページです</p>
+<h1 class="font-weight-bold text-center">About</h1>
+<p class="text-center">
+  ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+  お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+  様々なバリエーションをご用意しております。<br>
+  また、全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+  ぜひご注文ください。
+</p>
