--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,22 @@
-<h1>top</h1>
-<p>ようこそnagano_cakeへ！！</p>
+<div class="d-flex justify-content-center">
+  <p>
+    ようこそ、ながのCAKEへ！<br>
+    このサイトは、ケーキ販売のECサイトになります。<br>
+    会員でない方も商品の閲覧はできますが、<br>
+    購入には会員登録が必要になります。
+  </p>
+</div>
+
+
+<h2 class="font-weight-bold mx-5">新着商品</h2>
+<div class="d-flex mx-auto cart_item" style="width: 80%;">
+  <% @items.first(4).each do |item| %>
+  <div>
+    <%= link_to item_path(item.id) do %>
+      <%= attachment_image_tag item, :image, :fill, 250, 200 %>
+    <% end %>
+    <p class="font-weight-bold"><%= item.name %></p>
+    <p class="font-weight-bold">¥<%= item.with_tax_price.to_s(:delimited) %></p>
+  </div>
+  <% end %>
+</div>
