--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,28 +1,18 @@
-<div class="row">
-	<div class="col-xs-2">
-    <table class="table table-bordered table-hover text-center ec-genre-list" >
-      <tr>
-        <td>
-          <%= link_to "全商品を表示", items_path, class:"ec-genre-list-item" %>
-        </td>
-      </tr>
-    </table>
-	</div>
-
-  <h2 style="margin: 20px 0;">商品一覧(全<%= @items_all.count %>件)</h2>
-	<div class="col-xs-9 col-xs-offset-1">
-		<div class="product-card-content">
-
-
-		<% @items.each do |item| %>
-		<div class="col-xs-3" style="padding-right: 0px; padding-left: 0px; margin: 10px 0;">
-			<%= link_to item_path(item.id) ,style: "color: black;", data: {"turbolinks" => false} do %>
-				<%= attachment_image_tag item, :image, :fill, 200, 150, format: 'jpeg',fallback: "no_image.jpg" %><br>
-				<%= item.name %>
-				¥<%= item.price.to_s(:delimited, delimiter: ',') %>
-			<% end %>
-		</div>
-		<% end %>
-		</div>
-	</div>
+<div class="mx-5 d-flex">
+  <h3 class="font-weight-bold">商品一覧</h3>
+  <p>(全<%= @items.count %>件)</p>
 </div>
+
+<div class="d-flex flex-wrap mx-auto cart_item" style="width: 80%;">
+  <% @items.each do |item| %>
+  <div class="mx-3">
+    <%= link_to item_path(item.id) do %>
+      <%= attachment_image_tag item, :image, :fill, 250, 200 %>
+    <% end %>
+    <p><%= item.name %></p>
+    <p>¥<%= item.with_tax_price.to_s(:delimited) %></p>
+  </div>
+  <% end %>
+</div>
+
+<div class="d-flex justify-content-center"><%= paginate @items %></div>
