--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,77 +1,47 @@
-<div class="row">
-    <h3><strong>注文情報確認</strong></h3>
-    <div class="col-xs-9">
-      <table class="table table-hover table-inverse table-bordered">
-        <thead>
-          <tr class="info">
-            <th>商品名</th>
-            <th>単価(税込)</th>
-            <th>数量</th>
-            <th>小計</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @cart_items.each do |cart_item| %>
-            <tr>
-              <td class="text-left">
-                <%= attachment_image_tag( cart_item.item, :image, size: "60x50", fallback: "no_image.jpg") %>
-                <%= cart_item.item.name %>
-              </td>
-              <td class="text-right">
-                ¥<%= ((cart_item.item.price * 1.1).floor).to_s(:delimited, delimiter: ',') %>
-              </td>
-              <td class="text-right">
-                  <%= cart_item.amount %>
-              </td>
-              <td class="text-right">
-                ¥<%= ((cart_item.item.price * 1.1).floor * cart_item.amount).to_s(:delimited, delimiter: ',') %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-xs-3 billing">
-      <table class="table table-hover table-condensed table-bordered">
-          <tr>
-            <th class="info">配送料</th>
-            <td class="text-right col-xs-5">
-              ¥<%= session[:order]["shipping_cost"].to_s(:delimited, delimiter: ',') %>
-            </td>
-          </tr>
-          <tr>
-            <th class="info">商品合計</th>
-            <td class="text-right">
-              ¥<%= (session[:order]["total_payment"] - session[:order]["shipping_cost"]).to_s(:delimited, delimiter: ',') %>
-            </td>
-          </tr>
-          <tr>
-            <th class="info">請求金額</th>
-            <td class="text-right">
-              ¥<%= session[:order]["total_payment"].to_s(:delimited, delimiter: ',') %>
-            </td>
-          </tr>
-      </table>
-    </div>
-    <div class="col-xs-9 billing">
-      <table class="table table-hover table-condensed table-bordered">
-        <tr>
-          <th  class="info">支払方法</th>
-          <td class="text-left">
-            <%= session[:order]["payment_method"] %>
-          </td>
-        </tr>
-        <tr>
-          <th  class="info">お届け先</th>
-          <td class="text-left">
-            <%= session[:order]["postal_code"] %><br>
-            <%= session[:order]["address"] %><br>
-            <%= session[:order]["name"]  %>
-          </td>
-        </tr>
-      </table>
+<h4 class="mx-5">注文情報入力</h4>
 
-      <%= link_to "購入を確定する", public_orders_thanks_path, class: 'btn btn-primary col-xs-12' %>
+<h4 class="mx-3 font-weight-bold">支払方法</h4>
+  <%= form_with model:@order, url: orders_comfirm_path, local:true do |f| %>
+  <div class="mx-4">
+    <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %><br>
+    <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
+  </div>
 
-    </div>
+  <h4 class="mx-3 font-weight-bold">お届け先</h4>
+  <div class="mx-4">
+    <p>
+      <%= f.radio_button :address_select, "a" %>
+      <%= f.label :address_id, "ご自身の住所" %><br>
+      <%= current_customer.full_address %>
+    </p>
+    <p>
+    <%= f.radio_button :address_select, "b" %>
+    <%= f.label :address_id, "登録済住所から選択" %><br>
+    <%= f.select :address_id, options_from_collection_for_select(current_customer.addresses, :id, :full_address) %>
+    </p>
+    <p>
+      <%= f.radio_button :address_select, "c" %>
+      <%= f.label :address_id, "新しいお届け先" %>
+      <table>
+      <tr>
+        <td>郵便番号(ハイフンなし)</td>
+        <td><%= f.text_field :postal_code %></td>
+      </tr>
+      <tr>
+        <td>住所</td>
+        <td><%= f.text_field :address %></td>
+      </tr>
+      <tr>
+        <td>宛名</td>
+        <td><%= f.text_field :name %></td>
+      </tr>
+    </table>
+    </p>
+  </div>
+
+<div class="text-center">
+  <button type="submit" class="btn btn-primary">確認画面へ進む</button>
 </div>
+<% end %>
