--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,84 +1,75 @@
-<h3><strong>注文履歴詳細</strong></h3>
+<h4 class="mx-5">注文履歴詳細</h4>
 
-<div calss="row">
-    <div class="col-xs-8">
-    	<strong>注文情報</strong>
-  	    <table class="table table-bordered table-condensed">
-          <tbody>
-              <tr>
-                <th class="info">注文日</th>
-          	    <td class="text-left">
-                  <%= @order.created_at.strftime('%Y/%m/%d %H:%M') %>
-                </td>
-              </tr>
-              <tr>
-                <th class="info">配送先</th>
-                <td class="text-left">
-                  <%= @order.postal_code %><br>
-                  <%= @order.address %><br>
-                  <%= @order.name %>
-                </td>
-              </tr>
-              <tr>
-                <th class="info">支払方法</th>
-                <td class="text-left">
-                  <%= @order.payment_method %>
-                </td>
-              </tr>
-              <tr>
-                <th class="info">ステータス</th>
-                <td class="text-left">
-                  <%= @order.order_status %>
-                </td>
-              </tr>
-          </tbody>
-        </table>
-    </div>
+<div class="m-4 d-flex">
+  <div class="flex-column">
+    <h5 class="font-weight-bold">注文情報</h5>
+    <table class="table-bordered">
+      <tbody>
+        <tr>
+          <td>注文日</td>
+          <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+        </tr>
+        <tr>
+          <td>配送先</td>
+          <td>
+            〒<%= @order.postal_code %><br>
+            <%= @order.address %><br>
+            <%= @order.name %>
+          </td>
+        </tr>
+        <tr>
+          <td>支払方法</td>
+          <td><%= @order.payment_method_i18n %></td>
+        </tr>
+        <tr>
+          <td>ステータス</td>
+          <td><%= @order.status_i18n %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-    <div class="col-xs-3 billing">
-      <strong>請求情報</strong>
-        <table class="table  table-bordered table-condensed">
-            <tr>
-              <th class="info">配送料</th>
-              <td class="col-xs-5">
-                ¥<%= @order.shipping_cost.to_s(:delimited, delimiter: ',') %>
-              </td>
-            </tr>
-            <tr>
-              <th class="info">商品合計</th>
-              <td class="col-xs-5">
-                ¥<%= (@order.total_payment - @order.shipping_cost).to_s(:delimited, delimiter: ',') %>
-              </td>
-            </tr>
-            <tr>
-              <th class="info">請求金額</th>
-              <td class="col-xs-5">
-                ¥<%= @order.total_payment.to_s(:delimited, delimiter: ',') %>
-              </td>
-            </tr>
-        </table>
-    </div>
-    <div class="col-xs-7 order-details">
-    	<strong>注文内容</strong>
-        <table class="table table-striped table-bordered table-condensed">
-          <thead>
-            <tr class="info">
-                <th>商品</th>
-                <th>単価(税込)</th>
-                <th>個数</th>
-                <th>小計</th>
-            </tr>
-          </thead>
-          <tbody>
-        	<% @order_details.each do |order_detail| %>
-            <tr>
-                <td><%= order_detail.item.name %></td>
-                <td>¥<%= (order_detail.item.price * 1.1).floor.to_s(:delimited, delimiter: ',') %></td>
-                <td><%= order_detail.amount %></td>
-                <td>¥<%= ((order_detail.item.price * 1.1).floor * (order_detail.amount)).to_s(:delimited, delimiter: ',') %></td>
-            </tr>
-          <% end %>
-          </tbody>
-        </table>
-    </div>
+  <div class="flex-column mx-3">
+    <h5 class="font-weight-bold">請求情報</h5>
+    <table class="table-bordered">
+      <tbody>
+        <tr>
+          <td>商品合計</td>
+          <td><%= @total.to_s(:delimited) %></td>
+        </tr>
+        <tr>
+          <td>配送料</td>
+          <td><%= @order.shipping_cost.to_s(:delimited) %></td>
+        </tr>
+        <tr>
+          <td class="font-weight-bold">ご請求額</td>
+          <td><%= @order.total_payment.to_s(:delimited) %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="m-4">
+  <h5 class="font-weight-bold">注文内容</h5>
+  <table class="table-bordered">
+    <thead>
+      <tr>
+        <td>商品</td>
+        <td>単価(税込)</td>
+        <td>個数</td>
+        <td>小計</td>
+      </tr>
+    </thead>
+    <tbody>
+      <% @order_details.each do |order_detail| %>
+      <tr>
+        <td><%= order_detail.item.name %></td>
+        <td><%= order_detail.with_tax_price.to_s(:delimited) %></td>
+        <td><%= order_detail.amount %></td>
+        <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
