--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,5 +1,3 @@
-<body>
-	<div class="thankspage">
-		<h1 class="message">ご購入ありがとうございました！</h1>
-	</div>
-</body>
+<div class="d-flex align-items-center justify-content-center display-4 mt-5">
+  ご注文ありがとうございました！
+</div>
